# docker-compose-configurations

./: README.md
postgresql/: Makefile  README.md  docker-compose.yml  example_data.sql
setting_up_apache_kafka/: Makefile  README.md
spark_iceberg_minio/: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
spark_iceberg_minio/jobs/: read_job.py  write_job.py
spark_iceberg_minio_trino/: Makefile  README.md  docker-compose.yaml
spark_iceberg_minio_trino/load_data/: load_data_into_iceberg.py
spark_iceberg_minio_trino/trino/: Dockerfile
spark_iceberg_minio_trino/trino/etc/catalog/: iceberg.properties
