[tool.poetry]
name = "spark-iceberg-minio"
version = "0.1.0"
description = ""
authors = ["Joseph Corrado <josephcorrado7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pyspark = {extras = ["sql"], version = "^3.4.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
